@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-23T01:10:15Z",
+  "timestamp" : "2024-01-23T08:19:41Z",
   "count_outdated" : 1150,
   "uniques_outdated" : 728,
-  "count" : 1171,
-  "uniques" : 741,
+  "count" : 1172,
+  "uniques" : 742,
   "clones" : [
     {
       "timestamp": "2024-01-09T00:00:00Z",
@@ -100,6 +100,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-23T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
