@@ -1,3 +1,12 @@
+2024-01-23T08:19:41Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7622867050 # 49
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-23
+* notice: last 14d: unq all: 4 21
+* notice: prev accum: outdated-unq outdated-all / unq all: 728 1150 / 741 1171
+* notice: next accum: outdated-unq outdated-all / unq all: 728 1150 / 742 1172
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-01-23]
+
 2024-01-23T01:10:15Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7619574492 # 48
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-23
